--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=crudimagenesproduccion
 
 server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://localhost/crud_productos_railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Regina12.
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -18,6 +18,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
-cloudinary.cloud_name=dr4rmbokg
-cloudinary.api_key=317757613415794
-cloudinary.api_secret=2iUap6XfO57H0xewaeUJbS_-obo
+cloudinary.cloud_name=CLOUDINARY_CLOUD_NAME
+cloudinary.api_key=CLOUDINARY_API_KEY
+cloudinary.api_secret=CLOUDINARY_API_SECRET
