--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,9 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <skipTests>true</skipTests>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -74,6 +76,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
