--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.root=DEBUG
+logging.level.root=INFO
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
